k3s_cluster/base/dmz/media/profilarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: dmz
  labels:
    app: dmz-media-profilarr
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`profilarr.media.dmz.home`)
      # middlewares:
      #   - name: dmz-media-middleware-auth-authentik
      services:
        - name: dmz-media-profilarr-service
          port: 6668
          #tls: {}
